--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 layout: home
 ---
 
-# About
-GreaterBayHCI is an assembly of groups of researchers from universities and institutions across from the Greater Bay Area of China, with the goal to facilitate the sharing of knowledge and synergize efforts to advance the field of Human-Computer Interaction (HCI) research in China and globally. We are united by a common vision wherein HCI research serves as the driving force to connect the intersections of technologies, industries, and humanities. We organize academic events, such as internal workshops, seminars, and symposiums, for research sharing, and activities to foster connections between academia to the industries and the public. We also host social events on the occasions of HCI conferences (e.g. CHI, UIST, TEI, and DIS).
+<h1>About</h1>
+<div>GreaterBayHCI is an assembly of groups of researchers from universities and institutions across from the Greater Bay Area of China, with the goal to facilitate the sharing of knowledge and synergize efforts to advance the field of Human-Computer Interaction (HCI) research in China and globally. We are united by a common vision wherein HCI research serves as the driving force to connect the intersections of technologies, industries, and humanities. We organize academic events, such as internal workshops, seminars, and symposiums, for research sharing, and activities to foster connections between academia to the industries and the public. We also host social events on the occasions of HCI conferences (e.g. CHI, UIST, TEI, and DIS).
+</div>
+<h1>Events and organizers</h1>
+<div>Below are the schedules and corresponding committees for the upcoming events hosted by us:
+</div>			
 
-# Events and organizers
-Below are the schedules and corresponding committees for the upcoming events hosted by us:
 
-| Date | Event | Organizational committees | Location | Participation  |
-| --- | --- | --- | --- | --- |
-| 2024.4.27 | Pre-CHI symposium in Greater Bay | | City University of Hong Kong; Hong Kong University of Science and Technology, Guangzhou | Internal events |
-
-# Contact
+<h1>Contact</h1>
