--- a/prechi2025/program/welcome/index.html
+++ b/prechi2025/program/welcome/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: March 6, 2025 --><html lang="en-us" dir="ltr"
+<!-- Last Published: March 7, 2025 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
-<head><script src="/prechi2025/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=prechi2025/livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -44,7 +44,7 @@
   <meta name="description" content="@Yeung LT-17" />
 
   
-  <link rel="alternate" hreflang="en-us" href="http://localhost:1313/prechi2025/program/welcome/" />
+  <link rel="alternate" hreflang="en-us" href="https://gbahci.com/prechi2025/program/welcome/" />
 
   
   
@@ -161,7 +161,7 @@
   <link rel="icon" type="image/png" href="/prechi2025/media/icon_hu_ac500abaf8cebdb8.png" />
   <link rel="apple-touch-icon" type="image/png" href="/prechi2025/media/icon_hu_58241140982345d4.png" />
 
-  <link rel="canonical" href="http://localhost:1313/prechi2025/program/welcome/" />
+  <link rel="canonical" href="https://gbahci.com/prechi2025/program/welcome/" />
 
   
   
@@ -185,10 +185,10 @@
   <meta property="twitter:card" content="summary" />
   
   <meta property="og:site_name" content="Greater Bay HCI" />
-  <meta property="og:url" content="http://localhost:1313/prechi2025/program/welcome/" />
+  <meta property="og:url" content="https://gbahci.com/prechi2025/program/welcome/" />
   <meta property="og:title" content="Welcome Reception | Greater Bay HCI" />
-  <meta property="og:description" content="@Yeung LT-17" /><meta property="og:image" content="http://localhost:1313/prechi2025/media/logo.svg" />
-    <meta property="twitter:image" content="http://localhost:1313/prechi2025/media/logo.svg" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="@Yeung LT-17" /><meta property="og:image" content="https://gbahci.com/prechi2025/media/logo.svg" />
+    <meta property="twitter:image" content="https://gbahci.com/prechi2025/media/logo.svg" /><meta property="og:locale" content="en-us" />
   
     
       <meta
@@ -517,8 +517,8 @@
   
   <script
     defer
-    src="/prechi2025/js/hugo-blox-en.min.js"
-    integrity=""
+    src="/prechi2025/js/hugo-blox-en.min.47736f84e20cae1bb2224dc4605239689e913811575e32b5f86a700ee9d6529d.js"
+    integrity="sha256-R3NvhOIMrhuyIk3EYFI5aJ6ROBFXXjK1&#43;GpwDunWUp0="
   ></script>
 
   
@@ -862,7 +862,7 @@
       <div class="mb-4">
         <div class="mt-1.5 flex items-center gap-1 overflow-hidden text-sm text-gray-500 dark:text-gray-400">
       <div class="whitespace-nowrap transition-colors min-w-[24px] overflow-hidden text-ellipsis hover:text-gray-900 dark:hover:text-gray-100">
-        <a href="http://localhost:1313/prechi2025/program/">Tentative Program</a>
+        <a href="https://gbahci.com/prechi2025/program/">Tentative Program</a>
       </div><svg class="w-3.5 shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="m8.25 4.5l7.5 7.5l-7.5 7.5"/></svg><div class="whitespace-nowrap font-medium text-gray-700 dark:text-gray-100">Welcome Reception</div>
 </div>
 
