--- a/prechi2026/index.html
+++ b/prechi2026/index.html
@@ -8,11 +8,31 @@
   <script>
     // Apply dark mode immediately based on system preference to prevent flash
     (function () {
-      const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-      document.documentElement.setAttribute('data-bs-theme', prefersDark ? 'dark' : 'light');
-    })();
+      // Apply light mode immediately and aggressively prevent changes
+      (function () {
+        var html = document.documentElement;
+        html.setAttribute('data-bs-theme', 'light');
 
-    
+        // 1. Clear local storage if it saves the preference
+        try {
+          localStorage.removeItem('theme');
+          localStorage.setItem('theme', 'light');
+        } catch (e) { }
+
+        // 2. Use MutationObserver to lock the attribute
+        var observer = new MutationObserver(function (mutations) {
+          mutations.forEach(function (mutation) {
+            if (mutation.type === "attributes" && mutation.attributeName === "data-bs-theme") {
+              if (html.getAttribute('data-bs-theme') !== 'light') {
+                html.setAttribute('data-bs-theme', 'light');
+              }
+            }
+          });
+        });
+        observer.observe(html, { attributes: true });
+      })();
+
+      
   </script>
 
   <title>Home - Pre-CHI 2026</title>
@@ -46,10 +66,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769681199" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769683449" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769681199" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769683449" />
 
   
 
@@ -155,7 +175,7 @@
 
     <div style="
     position: relative;
-    background-image: url('/assets/images/shenzhenbg2026.jpg');
+    background-image: url('/prechi2026/assets/images/shenzhenbg2026.jpg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -198,18 +218,18 @@
     <!-- Participating Universities -->
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 40px; max-width: 1000px; margin: 0 auto; opacity: 0.9;">
       <div style="display: flex; justify-content: center; gap: 40px; width: 100%; flex-wrap: wrap; align-items: center;">
-        <img src="/assets/images/SUSTech.webp" alt="SUSTech" style="height: 100px; object-fit: contain;" />
-        <img src="/assets/images/cityu.svg" alt="CityU" style="height: 90px; object-fit: contain;" />
-        <img src="/assets/images/PolyU.webp" alt="PolyU" style="height: 90px; object-fit: contain;" />
-        <img src="/assets/images/STU.webp" alt="STU" style="height: 90px; object-fit: contain;" />
-        <img src="/assets/images/HKUST(GZ).webp" alt="HKUST(GZ)" style="height: 90px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/SUSTech.webp" alt="SUSTech" style="height: 100px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/cityu.svg" alt="CityU" style="height: 90px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/PolyU.webp" alt="PolyU" style="height: 90px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/STU.webp" alt="STU" style="height: 90px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/HKUST(GZ).webp" alt="HKUST(GZ)" style="height: 90px; object-fit: contain;" />
       </div>
       <div style="display: flex; justify-content: center; gap: 40px; width: 100%; flex-wrap: wrap; align-items: center; margin-top: 10px;">
-        <img src="/assets/images/UM.png" alt="UM" style="height: 90px; object-fit: contain;" />
-        <img src="/assets/images/HKUST.webp" alt="HKUST" style="height: 60px; object-fit: contain;" />
-        <img src="/assets/images/SYSU.webp" alt="SYSU" style="height: 90px; object-fit: contain;" />
-        <img src="/assets/images/SZU.webp" alt="SZU" style="height: 90px; object-fit: contain;" />
-        <img src="/assets/images/JNU.webp" alt="JNU" style="height: 90px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/UM.png" alt="UM" style="height: 90px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/HKUST.webp" alt="HKUST" style="height: 60px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/SYSU.webp" alt="SYSU" style="height: 90px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/SZU.webp" alt="SZU" style="height: 90px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/JNU.webp" alt="JNU" style="height: 90px; object-fit: contain;" />
       </div>
     </div>
   </div>
@@ -260,8 +280,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769681199" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1769681199"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769683449" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1769683449"></script>
 
 </body>
 </html>
