fixed header and logo

--- a/prechi2026/index.html
+++ b/prechi2026/index.html
@@ -90,10 +90,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769684523" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769751355" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769684523" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769751355" />
 
   
 
@@ -117,7 +117,8 @@
     }
 </style>
 <nav class="navbar navbar-expand-md d-pwa-none bg-body-tertiary mb-3"
-    aria-label="Main navigation">
+    aria-label="Main navigation"
+    style="margin-bottom: 0px!important;">
     <div class="container-fluid position-relative">
 
         <a class="navbar-brand order-0 fw-bold" href="/prechi2026/">
@@ -137,7 +138,7 @@
                 <li class="nav-item">
                     <a
       class="nav-link fw-bold"
-      href="/prechi2026/call-for-presenters/"
+      href="/prechi2026/call-for-participants/"
       title="Call for Participants"
     >
                     Call for Participants
@@ -159,15 +160,6 @@
       title="Venue"
     >
                     Venue
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a
-      class="nav-link fw-bold"
-      href="/prechi2026/gallery/"
-      title="Gallery"
-    >
-                    Gallery
                     </a>
                 </li>
                 <li class="nav-item">
@@ -195,9 +187,12 @@
 </nav></header>
   <main id="main" class="container-fluid my-3" role="main" tabindex="-1">
 
-<div class="bg-body-tertiary text-body-primary rounded p-4 p-md-5 mb-4">
+<style>
+    /* Remove default margin to let hero image touch the header */
+    #main { margin-top: 0 !important; }
+</style>
 
-    <div style="
+<div style="
     position: relative;
     background-image: url('/prechi2026/assets/images/shenzhenbg2026.jpg');
     background-attachment: fixed;
@@ -208,7 +203,7 @@
     text-align: center;
     padding: 8rem 0;
     margin-bottom: 2rem;
-    margin-top: -4rem;
+    margin-top: 0;
     width: 100vw;
     margin-left: calc(50% - 50vw);
 ">
@@ -232,25 +227,26 @@
     </p>
     <div>
       <!-- <a href="/gallery/" class="btn btn-primary btn-lg" style="margin-right: 15px; border: none; box-shadow: 0 4px 6px rgba(0,0,0,0.2);">View our photos</a> -->
-      <a href="/program/" class="btn btn-outline-light btn-lg" style="border-width: 2px; box-shadow: 0 4px 6px rgba(0,0,0,0.2);">View our program →</a>
+      <a href="/prechi2026/program/" class="btn btn-outline-light btn-lg" style="border-width: 2px; box-shadow: 0 4px 6px rgba(0,0,0,0.2);">View our program →</a>
+      <a href="/prechi2026/call-for-participants/" class="btn btn-primary btn-lg" style="margin-left: 15px; border: none; box-shadow: 0 4px 6px rgba(0,0,0,0.2);">Registration</a>
     </div>
   </div>
 </div>
-<div class="container" style="padding: 4rem 0;">
+<div class="container bg-body-tertiary text-body-primary rounded p-4 p-md-5 mb-4">
   <div style="text-align: center; margin-bottom: 4rem;">
     <!-- <h5 class="text-uppercase text-muted letter-spacing-2 mb-4" style="letter-spacing: 2px;">Participating Universities & Institutions</h5> -->
     <!-- Participating Universities -->
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 40px; max-width: 1000px; margin: 0 auto; opacity: 0.9;">
       <div style="display: flex; justify-content: center; gap: 40px; width: 100%; flex-wrap: wrap; align-items: center;">
         <img src="/prechi2026/assets/images/SUSTech.webp" alt="SUSTech" style="height: 100px; object-fit: contain;" />
-        <img src="/prechi2026/assets/images/cityu.svg" alt="CityU" style="height: 90px; object-fit: contain;" />
-        <img src="/prechi2026/assets/images/PolyU.webp" alt="PolyU" style="height: 90px; object-fit: contain;" />
-        <img src="/prechi2026/assets/images/STU.webp" alt="STU" style="height: 90px; object-fit: contain;" />
-        <img src="/prechi2026/assets/images/HKUST(GZ).webp" alt="HKUST(GZ)" style="height: 90px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/cityu.svg" alt="CityU" style="height: 70px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/PolyU.webp" alt="PolyU" style="height: 110px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/STU.png" alt="STU" style="height: 90px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/HKUST(GZ).webp" alt="HKUST(GZ)" style="height: 100px; object-fit: contain;" />
       </div>
       <div style="display: flex; justify-content: center; gap: 40px; width: 100%; flex-wrap: wrap; align-items: center; margin-top: 10px;">
         <img src="/prechi2026/assets/images/UM.png" alt="UM" style="height: 90px; object-fit: contain;" />
-        <img src="/prechi2026/assets/images/HKUST.webp" alt="HKUST" style="height: 60px; object-fit: contain;" />
+        <img src="/prechi2026/assets/images/HKUST.webp" alt="HKUST" style="height: 50px; object-fit: contain;" />
         <img src="/prechi2026/assets/images/SYSU.webp" alt="SYSU" style="height: 90px; object-fit: contain;" />
         <img src="/prechi2026/assets/images/SZU.webp" alt="SZU" style="height: 90px; object-fit: contain;" />
         <img src="/prechi2026/assets/images/JNU.webp" alt="JNU" style="height: 90px; object-fit: contain;" />
@@ -278,9 +274,7 @@
 </div>
 
 
-    
 
-</div>
 
 
   </main>
@@ -304,8 +298,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769684523" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1769684523"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769751355" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1769751355"></script>
 
 </body>
 </html>
