--- a/prechi2026/organizers/index.html
+++ b/prechi2026/organizers/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769684523" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769751355" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769684523" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769751355" />
 
   
 
@@ -100,7 +100,8 @@
     }
 </style>
 <nav class="navbar navbar-expand-md d-pwa-none bg-body-tertiary mb-3"
-    aria-label="Main navigation">
+    aria-label="Main navigation"
+    style="margin-bottom: 0px!important;">
     <div class="container-fluid position-relative">
 
         <a class="navbar-brand order-0 fw-bold" href="/prechi2026/">
@@ -120,7 +121,7 @@
                 <li class="nav-item">
                     <a
       class="nav-link fw-bold"
-      href="/prechi2026/call-for-presenters/"
+      href="/prechi2026/call-for-participants/"
       title="Call for Participants"
     >
                     Call for Participants
@@ -142,15 +143,6 @@
       title="Venue"
     >
                     Venue
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a
-      class="nav-link fw-bold"
-      href="/prechi2026/gallery/"
-      title="Gallery"
-    >
-                    Gallery
                     </a>
                 </li>
                 <li class="nav-item">
@@ -392,8 +384,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769684523" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1769684523"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769751355" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1769751355"></script>
 
 </body>
 </html>
