fixed photo naming

--- a/prechi2026/organizers/index.html
+++ b/prechi2026/organizers/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769751355" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769752662" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769751355" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769752662" />
 
   
 
@@ -189,7 +189,7 @@
           <div class="col-md-6">
             <div class="d-flex align-items-center">
               <div class="flex-shrink-0">
-                <img src="/prechi2026/assets/images/people/xiaohua sun.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Xiaohua Sun" />
+                <img src="/prechi2026/assets/images/people/xiaohua_sun.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Xiaohua Sun" />
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Xiaohua Sun</h5>
@@ -200,7 +200,7 @@
           <div class="col-md-6">
             <div class="d-flex align-items-center">
               <div class="flex-shrink-0">
-                <img src="/prechi2026/assets/images/people/liang hao.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Liang Hao" />
+                <img src="/prechi2026/assets/images/people/liang_hao.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Liang Hao" />
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Liang Hao</h5>
@@ -218,7 +218,7 @@
           <div class="col-md-6">
             <div class="d-flex align-items-center">
               <div class="flex-shrink-0">
-                <img src="/prechi2026/assets/images/people/xueliang li.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Xueliang Li" />
+                <img src="/prechi2026/assets/images/people/xueliang_li.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Xueliang Li" />
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Xueliang Li</h5>
@@ -229,7 +229,7 @@
           <div class="col-md-6">
             <div class="d-flex align-items-center">
               <div class="flex-shrink-0">
-                <img src="/prechi2026/assets/images/people/pengcheng an.png" class="rounded-circle object-fit-cover" width="64" height="64" alt="Pengcheng An" />
+                <img src="/prechi2026/assets/images/people/pengcheng_an.png" class="rounded-circle object-fit-cover" width="64" height="64" alt="Pengcheng An" />
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Pengcheng An</h5>
@@ -248,7 +248,7 @@
           <h2 class="h4 mb-4 border-bottom pb-2">Local Chair</h2>
           <div class="d-flex align-items-center">
             <div class="flex-shrink-0">
-              <img src="/prechi2026/assets/images/people/xu li.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Xu Li" />
+              <img src="/prechi2026/assets/images/people/xu_li.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Xu Li" />
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-0">Xu Li</h5>
@@ -276,7 +276,7 @@
           <h2 class="h4 mb-4 border-bottom pb-2">Panel Chair</h2>
           <div class="d-flex align-items-center">
             <div class="flex-shrink-0">
-              <img src="/prechi2026/assets/images/people/tao luo.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Tao Luo" />
+              <img src="/prechi2026/assets/images/people/tao_luo.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Tao Luo" />
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-0">Tao Luo</h5>
@@ -290,7 +290,7 @@
           <h2 class="h4 mb-4 border-bottom pb-2">Poster Chair</h2>
           <div class="d-flex align-items-center">
             <div class="flex-shrink-0">
-              <img src="/prechi2026/assets/images/people/Mirna zordan.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Mirna Zordan" />
+              <img src="/prechi2026/assets/images/people/Mirna_zordan.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Mirna Zordan" />
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-0">Mirna Zordan</h5>
@@ -304,7 +304,7 @@
           <h2 class="h4 mb-4 border-bottom pb-2">Technical Chair</h2>
           <div class="d-flex align-items-center">
             <div class="flex-shrink-0">
-              <img src="/prechi2026/assets/images/people/xuesong zhang.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Xuesong Zhang" />
+              <img src="/prechi2026/assets/images/people/xuesong_zhang.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Xuesong Zhang" />
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-0">Xuesong Zhang</h5>
@@ -318,7 +318,7 @@
           <h2 class="h4 mb-4 border-bottom pb-2">Web Chair</h2>
           <div class="d-flex align-items-center">
             <div class="flex-shrink-0">
-              <img src="/prechi2026/assets/images/people/zhicheng wang.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Zhicheng Wang" />
+              <img src="/prechi2026/assets/images/people/zhicheng_wang.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Zhicheng Wang" />
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-0">Zhicheng Wang</h5>
@@ -335,7 +335,7 @@
           <div class="col-md-6">
             <div class="d-flex align-items-center">
               <div class="flex-shrink-0">
-                <img src="/prechi2026/assets/images/people/yonglin chen.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Yonglin Chen" />
+                <img src="/prechi2026/assets/images/people/yonglin_chen.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Yonglin Chen" />
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Yonglin Chen</h5>
@@ -346,7 +346,7 @@
           <div class="col-md-6">
             <div class="d-flex align-items-center">
               <div class="flex-shrink-0">
-                <img src="/prechi2026/assets/images/people/tianze xie.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Tianze Xie" />
+                <img src="/prechi2026/assets/images/people/tianze_xie.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Tianze Xie" />
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Tianze Xie</h5>
@@ -384,8 +384,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769751355" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1769751355"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769752662" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1769752662"></script>
 
 </body>
 </html>
