added organizer affiliation

--- a/prechi2026/organizers/index.html
+++ b/prechi2026/organizers/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769752662" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769753256" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769752662" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769753256" />
 
   
 
@@ -193,7 +193,7 @@
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Xiaohua Sun</h5>
-                <small class="text-muted">Professor</small>
+                <small class="text-muted">Professor, SUSTech</small>
               </div>
             </div>
           </div>
@@ -204,7 +204,7 @@
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Liang Hao</h5>
-                <small class="text-muted">Professor</small>
+                <small class="text-muted">Professor, SUSTech</small>
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Xueliang Li</h5>
-                <small class="text-muted">Assistant Professor</small>
+                <small class="text-muted">Assistant Professor, SUSTech</small>
               </div>
             </div>
           </div>
@@ -233,7 +233,7 @@
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Pengcheng An</h5>
-                <small class="text-muted">Assistant Professor</small>
+                <small class="text-muted">Assistant Professor, SUSTech</small>
               </div>
             </div>
           </div>
@@ -252,7 +252,7 @@
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-0">Xu Li</h5>
-              <small class="text-muted">Administrative Vice Dean</small>
+              <small class="text-muted">Administrative Vice Dean, SUSTech</small>
             </div>
           </div>
         </div>
@@ -262,11 +262,11 @@
           <h2 class="h4 mb-4 border-bottom pb-2">Program Chair</h2>
           <div class="d-flex align-items-center">
             <div class="flex-shrink-0">
-              <img src="/prechi2026/assets/images/people/seungwoo.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Suengwoo Je" />
+              <img src="/prechi2026/assets/images/people/seungwoo.jpg" class="rounded-circle object-fit-cover" width="64" height="64" alt="Seungwoo Je" />
             </div>
             <div class="flex-grow-1 ms-3">
-              <h5 class="mb-0">Suengwoo Je</h5>
-              <small class="text-muted">Assistant Professor</small>
+              <h5 class="mb-0">Seungwoo Je</h5>
+              <small class="text-muted">Assistant Professor, SUSTech</small>
             </div>
           </div>
         </div>
@@ -280,7 +280,7 @@
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-0">Tao Luo</h5>
-              <small class="text-muted">Assistant Professor</small>
+              <small class="text-muted">Assistant Professor, SUSTech</small>
             </div>
           </div>
         </div>
@@ -294,7 +294,7 @@
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-0">Mirna Zordan</h5>
-              <small class="text-muted">Assistant Professor</small>
+              <small class="text-muted">Assistant Professor, SUSTech</small>
             </div>
           </div>
         </div>
@@ -308,7 +308,7 @@
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-0">Xuesong Zhang</h5>
-              <small class="text-muted">Postdoc</small>
+              <small class="text-muted">Postdoc, SUSTech</small>
             </div>
           </div>
         </div>
@@ -322,7 +322,7 @@
             </div>
             <div class="flex-grow-1 ms-3">
               <h5 class="mb-0">Zhicheng Wang</h5>
-              <small class="text-muted">PhD</small>
+              <small class="text-muted">PhD Student, SUSTech</small>
             </div>
           </div>
         </div>
@@ -339,7 +339,7 @@
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Yonglin Chen</h5>
-                <small class="text-muted">PhD</small>
+                <small class="text-muted">PhD Student, SUSTech</small>
               </div>
             </div>
           </div>
@@ -350,7 +350,7 @@
               </div>
               <div class="flex-grow-1 ms-3">
                 <h5 class="mb-0">Tianze Xie</h5>
-                <small class="text-muted">PhD</small>
+                <small class="text-muted">PhD Student, SUSTech</small>
               </div>
             </div>
           </div>
@@ -384,8 +384,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769752662" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1769752662"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769753256" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1769753256"></script>
 
 </body>
 </html>
