updated organizers and registration page

--- a/prechi2026/gallery/index.html
+++ b/prechi2026/gallery/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769753256" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769760752" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769753256" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769760752" />
 
   
 
@@ -102,7 +102,7 @@
 <nav class="navbar navbar-expand-md d-pwa-none bg-body-tertiary mb-3"
     aria-label="Main navigation"
     style="margin-bottom: 0px!important;">
-    <div class="container-fluid position-relative">
+    <div class="container-fluid position-relative px-5">
 
         <a class="navbar-brand order-0 fw-bold" href="/prechi2026/">
             <img src="/prechi2026/assets/images/gba-logo.svg" alt="Logo" height="30"
@@ -154,15 +154,6 @@
                     Organizers
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a
-      class="nav-link fw-bold"
-      href="/prechi2026/sponsors/"
-      title="Sponsors"
-    >
-                    Sponsors
-                    </a>
-                </li>
             </ul>
         </div>
 
@@ -202,8 +193,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769753256" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1769753256"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769760752" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1769760752"></script>
 
 </body>
 </html>
