updated participant page

--- a/prechi2026/call-for-participants/index.html
+++ b/prechi2026/call-for-participants/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769764252" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769997609" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769764252" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769997609" />
 
   
 
@@ -216,7 +216,7 @@
             <i class="fas fa-calendar-alt me-1"></i> Deadline: March 14, 2026
           </p>
           <a href="https://v.wjx.cn/vm/eYv0gXz.aspx#" class="btn btn-primary rounded-pill w-100" target="_blank">
-            Register Here
+            Register
           </a>
         </div>
       </div>
@@ -240,7 +240,7 @@
         <div class="flex-grow-1 text-center text-md-start mb-3 mb-md-0">
           <h3 class="card-title h4 mb-2">Paper Presentations</h3>
           <p class="card-text text-secondary mb-0" style="max-width: 700px;">
-            Have a paper accepted at CHI 2026, CSCW 2025, or other top venues? Share your work with the local community! This is a fantastic opportunity to rehearse your talk and get feedback.
+            Have a paper accepted at CHI 2026, CSCW 2025, or other influential conferences or journals in HCI? Share your work with the local community! This is a fantastic opportunity to rehearse your talk, extend the audience of your work, and get feedback.
           </p>
         </div>
         <div class="text-center ms-md-4" style="min-width: 200px;">
@@ -248,7 +248,7 @@
             <i class="fas fa-calendar-alt me-1"></i> Deadline: March 7, 2026
           </p>
           <a href="https://v.wjx.cn/vm/t9RdYk8.aspx#" class="btn btn-primary rounded-pill w-100" target="_blank">
-            Register Talk
+            Register Paper
           </a>
         </div>
       </div>
@@ -268,7 +268,12 @@
             Showcase your work-in-progress or late-breaking results. Posters invoke lively 1-on-1 discussions and are great for finding collaborators.
           </p>
           <p class="card-text text-secondary mb-2 fst-italic" style="max-width: 700px;">
-          <strong style="color: #dc3545;">Note:</strong> Posters should be 170 cm (H) × 120 cm (W).<br />Authors are responsible for printing their own posters.
+          <strong style="color: #dc3545;">Note:</strong> 
+          Posters size should be 170 cm (H) × 120 cm (W).
+          <br />
+          Authors are responsible for printing and bringing their own posters to the conference sites. 
+          <br />
+          Further notification about setting up the posters on site will be sent to the authors' registration email before the conference.
           </p>
         </div>
         <div class="text-center ms-md-4" style="min-width: 200px;">
@@ -298,12 +303,14 @@
           <i class="fas fa-ad fa-3x"></i>
         </div>
         <div class="flex-grow-1 text-center text-md-start mb-3 mb-md-0">
-          <h3 class="card-title h4 mb-2">Conference Booklet Flyers</h3>
+          <h3 class="card-title h4 mb-2">Conference Booklet</h3>
           <p class="card-text text-secondary mb-0" style="max-width: 700px;">
-            Increase visibility for your lab, school, or academic program. We invite you to include a flyer in our conference booklet to reach our targeted audience.
+            Increase visibility for your lab, school, or academic program. We invite you to contribute introductory page(s) to our conference booklet to reach our targeted audience.
           </p>
           <p class="card-text text-secondary mt-2 fst-italic" style="max-width: 700px;">
             <strong style="color: #dc3545;">Note:</strong> Flyers size: A5 (210 mm (H) × 148.5 mm (W)), max two pages.
+            <br />
+            Submission material: PDF file.
           </p>
         </div>
         <div class="text-center ms-md-4" style="min-width: 200px;">
@@ -311,7 +318,7 @@
             <i class="fas fa-calendar-alt me-1"></i> Deadline: March 7, 2026
           </p>
           <a href="https://v.wjx.cn/vm/Ow77bNL.aspx#" class="btn btn-primary rounded-pill w-100" target="_blank">
-            Register Flyer
+            Register Submission
           </a>
         </div>
       </div>
@@ -342,8 +349,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769764252" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1769764252"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769997609" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1769997609"></script>
 
 </body>
 </html>
