--- a/prechi2026/index.html
+++ b/prechi2026/index.html
@@ -90,10 +90,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769998144" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769999045" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769998144" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769999045" />
 
   
 
@@ -119,7 +119,7 @@
 <nav class="navbar navbar-expand-md d-pwa-none bg-body-tertiary mb-3"
     aria-label="Main navigation"
     style="margin-bottom: 0px!important;">
-    <div class="container-fluid position-relative px-5">
+    <div class="container-fluid position-relative px-3 px-md-5">
 
         <a class="navbar-brand order-0 fw-bold" href="/prechi2026/">
             <img src="/prechi2026/assets/images/gba-logo.svg" alt="Logo" height="30"
@@ -289,8 +289,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769998144" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1769998144"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769999045" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1769999045"></script>
 
 </body>
 </html>
